--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>Contact</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="assets/css/style-contact.css">
     </head>
     <body>
