adjustments to responsive header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <h1 id="header-name">Zach Yingling</h1>
-            <strong>
-                <a href="#" id="about">About</a>
-                <a href="portfolio.html" id="portfolio">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </strong>
+            <div class="header-anchors">
+                <a href="#" id="about"><strong>About</strong></a>
+                <a href="portfolio.html" id="portfolio"><strong>Portfolio</strong></a>
+                <a href="contact.html" id="contact"><strong>Contact</strong></a>
+            </div>
         </header>
 
         <div class="content">
