--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,10 @@
     <body>
         <header>
             <h1 id="header-name">Zach Yingling</h1>
-            <strong>
+            <strong class="header-anchors">
                 <a href="index.html" id="about">About</a>
                 <a href="portfolio.html" id="portfolio">Portfolio</a>
-                <a href="#">Contact</a>   
+                <a href="#" id="contact">Contact</a>   
             </strong>
         </header>
 
