header work in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,10 @@
     <body>
         <header>
             <h1 id="header-name">Zach Yingling</h1>
-            <strong>
+            <strong class="header-anchors">
                 <a href="index.html" id="about">About</a>
                 <a href="#" id="portfolio">Portfolio</a>
-                <a href="contact.html">Contact</a>   
+                <a href="contact.html" id="contact">Contact</a>   
             </strong>
         </header>
 
