adding crystal collector into portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,12 @@
             <h2>Word Guess Game</h2>
           </div>
         </a>
-        <div class="video-games">
-          <img
-            src="http://lorempixel.com/output/business-q-c-400-300-9.jpg"
-            alt="sample photo"
-          />
-          <h2>Video Games</h2>
-        </div>
+        <a href="https://zachyingling.github.io/unit-4-game/" target="_blank">
+          <div class="video-games">
+            <img src="assets/images/unit-4-game.PNG" alt="Unit-4 Game" />
+            <h2>Crystal Collector</h2>
+          </div>
+        </a>
         <div class="computer">
           <img
             src="http://lorempixel.com/output/technics-q-c-400-300-4.jpg"
