adding technical trivia game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,12 @@
             <h2>Crystal Collector</h2>
           </div>
         </a>
-        <div class="computer">
-          <img
-            src="http://lorempixel.com/output/technics-q-c-400-300-4.jpg"
-            alt="sample photo"
-          />
-          <h2>Computers</h2>
-        </div>
+        <a href="https://zachyingling.github.io/TriviaGame/" target="_blank">
+          <div class="computer">
+            <img src="assets/images/TriviaGame.PNG" alt="Trivia Game" />
+            <h2>Trivia Game</h2>
+          </div>
+        </a>
         <div class="family">
           <img
             src="http://lorempixel.com/output/people-q-c-400-300-8.jpg"
