adding giftastic to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,12 @@
             <h2>Trivia Game</h2>
           </div>
         </a>
-        <div class="family">
-          <img
-            src="http://lorempixel.com/output/people-q-c-400-300-8.jpg"
-            alt="sample photo"
-          />
-          <h2>Family</h2>
-        </div>
+        <a href="https://zachyingling.github.io/GifTastic/" target="_blank">
+          <div class="family">
+            <img src="assets/images/GifTastic.PNG" alt="GifTastic" />
+            <h2>GifTastic</h2>
+          </div>
+        </a>
         <div class="friends">
           <img
             src="http://lorempixel.com/output/people-q-c-400-300-4.jpg"
