--- a/portfolio.html
+++ b/portfolio.html
@@ -54,13 +54,19 @@
             <h2>GifTastic</h2>
           </div>
         </a>
-        <div class="friends">
-          <img
-            src="http://lorempixel.com/output/people-q-c-400-300-4.jpg"
-            alt="sample photo"
-          />
-          <h2>Friends</h2>
-        </div>
+        <a
+          href="https://zachyingling.github.io/RPS-Multiplayer/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <div class="friends">
+            <img
+              src="assets/images/Multiplayer-RPS.PNG"
+              alt="Multiplayer RPS"
+            />
+            <h2>Multiplayer Rock, Paper, Scissors</h2>
+          </div>
+        </a>
       </div>
       <footer>
         <h6 id="copyright">Copyright&copy;</h6>
